# repomirrorkit

./: .gitignore  .gitmodules  CLAUDE.md  README.md  manifest.json  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/agents/: architect.md  ba.md  code-quality-reviewer.md  developer.md  devops-release.md  integrator-merge-captain.md  security-engineer.md  team-lead.md  tech-qa.md  ux-ui-designer.md
.claude/commands/: backlog-consolidate.md  backlog-refinement.md  bg.md  build-traceability.md  commands.md  deploy.md  docs-update.md  eject_project.md  long-run.md  merge-bean.md  new-dev-decision.md  new-work.md  pick-bean.md  review-beans.md  run.md  scaffold-project.md  show-backlog.md  spawn-bean.md  status-report.md  telemetry-report.md  threat-model.md  trello-add.md  trello-load.md  validate-repo.md
.claude/hooks/: compliance-gate.md  git-commit-branch.md  git-generate-pr.md  hook-policy.md  post-task-qa.md  pre-commit-lint.md  security-scan.md  telemetry-stamp.py
.claude/local/: mcp.json
ai/beans/: _bean-template.md  _index.md
ai/context/: bean-workflow.md
ai/personas/: architect.md  ba.md  code-quality-reviewer.md  developer.md  devops-release.md  integrator-merge-captain.md  security-engineer.md  team-lead.md  tech-qa.md  ux-ui-designer.md
ai/stacks/: pyside6.md  python.md
ai/tasks/: _index.md
scripts/: claude-kit-check.sh  claude-publish.sh  claude-sync.sh
scripts/githooks/: post-checkout
src/repo_mirror_kit/: __main__.py  app.py  main.py
tests/: conftest.py
tests/unit/: test_analyzer_integrations.py  test_coverage.py  (+47 more)
(+268 files in other folders)
