[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repo-mirror-kit"
version = "0.1.0"
description = "A desktop tool for mirroring git repositories"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.0",
    "pytest-qt>=4.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/repo_mirror_kit"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
"src/repo_mirror_kit/services/clone_service.py" = ["S603", "S607"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
